; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_servo_control/main/extr_mcpwm_servo_control_example.c_mcpwm_example_servo_control.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/mcpwm/mcpwm_servo_control/main/extr_mcpwm_servo_control_example.c_mcpwm_example_servo_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i64, i64 }

@.str = private unnamed_addr constant [47 x i8] c"Configuring Initial Parameters of mcpwm......\0A\00", align 1
@MCPWM_UP_COUNTER = common dso_local global i32 0, align 4
@MCPWM_DUTY_MODE_0 = common dso_local global i32 0, align 4
@MCPWM_UNIT_0 = common dso_local global i32 0, align 4
@MCPWM_TIMER_0 = common dso_local global i32 0, align 4
@SERVO_MAX_DEGREE = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"Angle of rotation: %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"pulse width: %dus\0A\00", align 1
@MCPWM_OPR_A = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mcpwm_example_servo_control(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__, align 8
  store i8* %0, i8** %2, align 8
  %6 = call i32 (...) @mcpwm_example_gpio_initialize()
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  store i32 50, i32* %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 4
  store i64 0, i64* %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  store i64 0, i64* %10, align 8
  %11 = load i32, i32* @MCPWM_UP_COUNTER, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  store i32 %11, i32* %12, align 8
  %13 = load i32, i32* @MCPWM_DUTY_MODE_0, align 4
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  store i32 %13, i32* %14, align 4
  %15 = load i32, i32* @MCPWM_UNIT_0, align 4
  %16 = load i32, i32* @MCPWM_TIMER_0, align 4
  %17 = call i32 @mcpwm_init(i32 %15, i32 %16, %struct.TYPE_3__* %5)
  br label %18

18:                                               ; preds = %1, %39
  store i64 0, i64* %4, align 8
  br label %19

19:                                               ; preds = %36, %18
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* @SERVO_MAX_DEGREE, align 8
  %22 = icmp slt i64 %20, %21
  br i1 %22, label %23, label %39

23:                                               ; preds = %19
  %24 = load i64, i64* %4, align 8
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i64 %24)
  %26 = load i64, i64* %4, align 8
  %27 = call i64 @servo_per_degree_init(i64 %26)
  store i64 %27, i64* %3, align 8
  %28 = load i64, i64* %3, align 8
  %29 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i64 %28)
  %30 = load i32, i32* @MCPWM_UNIT_0, align 4
  %31 = load i32, i32* @MCPWM_TIMER_0, align 4
  %32 = load i32, i32* @MCPWM_OPR_A, align 4
  %33 = load i64, i64* %3, align 8
  %34 = call i32 @mcpwm_set_duty_in_us(i32 %30, i32 %31, i32 %32, i64 %33)
  %35 = call i32 @vTaskDelay(i32 10)
  br label %36

36:                                               ; preds = %23
  %37 = load i64, i64* %4, align 8
  %38 = add nsw i64 %37, 1
  store i64 %38, i64* %4, align 8
  br label %19

39:                                               ; preds = %19
  br label %18
}

declare dso_local i32 @mcpwm_example_gpio_initialize(...) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @mcpwm_init(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i64 @servo_per_degree_init(i64) #1

declare dso_local i32 @mcpwm_set_duty_in_us(i32, i32, i32, i64) #1

declare dso_local i32 @vTaskDelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
